--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -39,6 +40,14 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --breakpoint-2xl: 1400px;
+}
+
+@utility container {
+  width: 100%;
+  margin-inline: auto; /* margin-left: auto; margin-right: auto; */
+  padding-inline: 2rem; /* padding-left: 2rem; padding-right: 2rem; */
+  @variant 2xl { max-width: 1400px; } /* custom 2xl breakpoint*/
 }
 
 :root {
@@ -112,8 +121,12 @@
 
 @layer base {
   * {
+    margin: 0;
+    padding: 0;
+    font-family: "Inter", sans-serif;
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
